# huggingface-rs

./: Cargo.toml  index.html  output.html
.github/workflows/: rust.yml
src/: main.rs
