[package]
name = "hfrs"
version = "0.1.0"
edition = "2021"
authors = ["MosRat"]
description = "A download tool for HuggingFace Datasets and Models with proxy"


[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
clap = { version = "4.5.13", features = ["derive"] }
reqwest = {version = "0.12.5",features = ["json","stream"]}
indicatif = "0.17.8"
futures-util = "0.3.30"